# P4B-Translator

./: .gitignore  CMakeLists.txt  README.md
backends/verify/: CMakeLists.txt
backends/verify/bpl_verify/: main.cpp
backends/verify/translate/: analyzer.cpp  analyzer.h  bmv2.cpp  bmv2.h  boogie_procedure.cpp  boogie_procedure.h  boogie_statement.cpp  boogie_statement.h  option.h  options.h  p4ltl_utils.cpp  p4ltl_utils.h  translate.cpp  translate.h  utils.cpp  utils.h  version.h.cmake
build-old/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  config.h  install_manifest.txt  irgen-fixup.awk  jsonFile.json  outputFROM.json  p4c  p4c-bm2-psa  p4c-bm2-ss  p4c-dpdk  p4c-ebpf  p4c-graphs  p4c-translator  p4c-ubpf  p4test
build-old/control-plane/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build-old/frontends-old/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build-old/ir/: CTestTestfile.cmake  Makefile  cmake_install.cmake  gen-tree-macro.h.tmp  ir-generated.cpp  ir-generated.cpp.tmp  ir-generated.h.fixup  ir-generated.h.tmp
build-old/lib/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build-old/midend/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build-old/p4include/: v1model.p4
build-old/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build-old/tmpe1v_k5hr/: control.h  lpm_ebpf.p4-stderr  lpm_ebpf.p4-stdout  pcap0_in.pcap  test.c  test.h
build-old/tmph64osx0i/: control.h  ebpf_conntrack_extern.p4-stderr  ebpf_conntrack_extern.p4-stdout  pcap0_in.pcap  test.c  test.h
feature-testcases/: cleanup_v1.py  readme.md
feature-testcases/actionrun/: common-case.json  common-case.p4  common-fall-through.bpl  default-fall-through.bpl  default-fall-through.json  default-fall-through.p4  default.bpl  default.json  default2.bpl  empty-case.json  empty-case.p4  readme
feature-testcases/bool/: out.bpl  out.json
feature-testcases/error/: out.bpl  out.json
feature-testcases/parser/: readme
feature-testcases/parserStateLocalVar/: test.json  test.p4
feature-testcases/pathCondition/: simple-router.bpl  simple-router.p4  unreachable.p4
feature-testcases/stack/: issue1607-bmv2.p4  out.bpl  out.json
feature-testcases/switchStatement/: out.bpl  out.json
frontends/: CMakeLists.txt
frontends/common/: options.cpp  options.h  parseInput.h
frontends/parsers/: parserDriver.cpp  parserDriver.h
testdata/p4_16_samples/: ipv4-actions_ubpf.p4  ipv6-actions_ubpf.p4  simple-actions_ubpf.p4  (+2 more)
(+1306 files in other folders)
